--- a/projekte/briefe.html
+++ b/projekte/briefe.html
@@ -3,9 +3,175 @@
 <head>
   <meta charset="UTF-8">
   <title>Briefe an Maurice</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>Briefe an Maurice von Miriam Holz </h1>
+<body class="projektseite">
+
+  <div class="menu-toggle" onclick="toggleMenu()">
+  <span>Zwischenräume<br>Übergänge</span>
+</div>
+
+<div id="fullscreenMenu" class="hidden">
+  <nav>
+    <ul>
+      <li><a href="info.html">Über die Exkursion</a></li>
+      <li><a href="briefe.html">Briefe an Maurice</a></li>
+      <li><a href="egor.html">Egor</a></li>
+      <li><a href="HumanNature.html">HUMAN NATURE - the nature of being human</a></li>
+      <li><a href="mareesImprimees.html">Marées Imprimées - entre rivage et corps</a></li>
+      <li><a href="menhirküre.html">Menhirküre</a></li>
+      <li><a href="stayhere.html">STAY HERE</a></li>
+      <li><a href="TheInBetween.html">The In-Between - Where Thoughts Find Words</a></li>
+      <li><a href="thelake.html">the lake</a></li>
+      <li><a href="tiefblau.html">Tiefblau </a></li>
+      <li><a href="entre-sentieure.html">une entre-sentieure</a></li>
+      <li><a href="UebergaengeInMusik.html">Übergänge in der Musik: Eine Reise von alt zu neu – traditionell zu modern</a></li>
+      <li><a href="zwischentoene.html">ZWISCHENTÖNE</a></li>
+      <li><a href="IchUndWir.html">Zwischen ich und wir</a></li>
+    </ul>
+  </nav>
+</div>
+
+ <main class="page-content">
+  <h1>Briefe an Maurice </h1>
+   <p class="autor">von Miriam Holz</p>
+
+  <p>Da die Bretagne über eine atemberaubende Natur verfügt, die bei einem Spaziergang den Gedanken freien Lauf lässt, lag hier die 
+    Entscheidung nahe, dies mit philosophischen Gedanken zusammenzuführen.
+     Das Ziel war hierbei, Momentaufnahmen aus der Exkursion zu nutzen und diese in Zusammenhang mit Merleau-Pontys Philosophie
+    zu bringen, selbstverständlich mit einem Blick auf Zwischenräume und Übergänge. 
+     Wie in einem Artikel der Eclectic Gallery (2024) hervorgeht, ergänzen sich visuelle Darstellungen und philosophische Gedanken, indem sie die
+    menschliche Kreativität und die innere Suche nach Sinn und Bedeutung verbindet.
+     Um die Gallerie zu zitieren: „Through the in-terplay of thought and visual expression, we are reminded of the pro-found 
+     interconnectedness of all things and the enduring power of ideas to shape our perception of the world.“ (Eclectic Gallery, 2024).
+      So bieten diese zwei Faktoren eine stimmige Kombination, um sich mit den Zwischenräumen und Übergängen der Bretagne auseinanderzusetzen.</p>
+
+    <p>Für die philosophische Grundlage wurden Gedanken von Merleau-Ponty herangezogen. Als visuelles Medium wurde eine 
+      Kombination aus Fotografie und Text gewählt, um sich persönlichen Fähigkeiten anzupassen. 
+      Zur technischen Grundlage wurden Canva und der KI Chat-bot ChatGPT herangezogen, um eine Brücke zum Digitalisierungsfokus meines Masters zu bauen.</p>
+
+    <p>Der französische Philosoph Maurice Merleau-Ponty (1908-1961) war eine prägende Figur in den Strömungen des Existentialismus und 
+      insbesondere der Phänomenologie, also der Philosophie der Wahrnehmung. In seinen Werken setzte er sich speziell mit den Beziehungen
+       zwischen dem Geist und dem Körper, sowie der faktischen und der erlebten Welt auseinander. Hierbei betont er unter anderem, dass der menschliche Körper nicht
+        nur als Objekt in der Welt besteht, sondern dass die Welt durch ihn als Medium erlebt wird. Auch Naturphilosophie findet sich in seinen Texten 
+        wieder (Toadvine, 2023). Da Merleau-Ponty auch über die Beziehung zwischen dem Sichtbaren und dem
+       Unsichtbaren philosophiert (Merleau-Ponty, 1986), wurde auch eine Einbindung bretonischer Folklore in Form 
+       des Mythos der Stadt Ys in die textliche Gestaltung vorgenommen.</p>
+
+        <div class="image-grid">
+      <img src="/images/projekte/Postkarten/Karte_1.jpg" alt="Postkarte Vorderseite 1" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_2.jpg" alt="Postkarte Vorderseite 2" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_3.jpg" alt="Postkarte Vorderseite 3" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_4.jpg" alt="Postkarte Vorderseite 4" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_5.jpg" alt="Postkarte Vorderseite 5" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_6.jpg" alt="Postkarte Vorderseite 6" class="clickable">
+    </div>
+
+    <p>Die Postkarten wurden für dieses Projekt bewusst „kitschig“ gestaltet. Der Begriff „kitschig“ soll dabei beschreiben, dass die Karten massentauglich 
+      und damit verhältnismäßig unpersönlich aussehen. Reisepostkarten sind häufig ein Mittel zum Zweck. Viele Reisende kaufen sie nicht direkt als
+       Andenken, sondern stattdessen als Geste, dass sie an ihre Liebsten denken. Sie überlegen daher nicht lange, was die Postkarte in ihnen auslöst, sondern
+        suchen nach einem Motiv eines Ortes, den sie besucht haben. Im Falle der Protagonistin diesen die Postkarten beinahe mehr als Notizblock
+         oder Tagebuch, statt als Nachrichten-medium an ihren Freund. Das Format der Postkarte repräsentiert zum einen die Charakteristik der Exkursion als Reise, aber
+       auch als Tool für den Übergang einer Nachricht einer Person an eine andere. Zudem sorgt die Beschriftung der Karte, die über Adressfelder 
+       hinausgeht, für einen Status als Zwischenraum. Die Karte als Übergangsmedium einer Nachricht kann ihren ursprünglichen Sinn nicht
+        mehr erfüllen und wird somit zu 
+       einem in der Luft hängenden Zwischenraum einer Nachricht, die an eine Person adressiert ist, diese jedoch vielleicht nie in der Wirklichkeit erreichen wird.</p>
+
+    <p>Der Text der Postkarten behandelt die Gedanken einer jungen Frau, die in ihrem Leben aktuell unterschiedliche Übergänge erlebt und in einem Zwischenraum
+       zwischen dem jungen Erwachsenendasein und dem gefühlten „Rest ihres Lebens“ steht. In der Populärpsychologie wird das auch häufig
+        als „Quarterlife Crisis“ bezeichnet (Hamberger, 2023). Die Ruhe der weiten Natur und besonders die Offenheit des Meeres eröffnen der 
+        Protagonistin neue Möglichkeiten, über diese Um-brüche nachzudenken. Dabei wendet sie sich an ihren Freund „Mau-rice“, der auf dem 
+        Philosophen beruht, indem sie sich auf seine Worte, bzw. seine philosophischen Gedanken bezieht und daraus auch einen gewissen Trost in einer schwierigen 
+      Zeit zieht. Die mit Hand aufgeschriebenen Texte sollen dabei die persönliche Immersion ermöglichen und die Gedanken persönlicher und greifbarer machen.</p>
+
+
+       <div class="image-grid rückseiten">
+      <img src="/images/projekte/Postkarten/Text_Karte_1.jpg" alt="Postkarte Rückseite 1" class="clickable">
+      <img src="/images/projekte/Postkarten/Text_Karte_2.jpg" alt="Postkarte Rückseite 2" class="clickable">
+      <img src="/images/projekte/Postkarten/Text_Karte_3.jpg" alt="Postkarte Rückseite 3" class="clickable">
+      <img src="/images/projekte/Postkarten/Text_Karte_4.jpg" alt="Postkarte Rückseite 4" class="clickable" >
+      <img src="/images/projekte/Postkarten/Text_Karte_5.jpg" alt="Postkarte Rückseite 5" class="clickable" >
+      <img src="/images/projekte/Postkarten/Text_Karte_6.jpg" alt="Postkarte Rückseite 6" class="clickable">
+    </div>
+
+    <p>Ein Kernaspekt des Projektes ist das Aufeinandertreffen von Menschlichkeit und Technik. Ich war beeindruckt davon, wie gut die KI 
+      Sinneseindrücke und menschliche Gefühle in Worte fassen konnte. Das Lesen der KI-generierten Texte löste tatsächlich etwas in mir 
+      aus, da diese in Worte fassen konnten, was ich in dieser Lebenssituation kaum mit Worten beschreiben konnte. Zudem konnte das Large 
+      Language Model Sinneseindrücke und die Wirkung der Natur auf Menschen so gut beschreiben, dass der Text tatsächlich menschlich geschrieben
+       wirkt. Somit repräsentiert das Projekt neben den inhaltlichen Aspekten die Harmonie zwischen Mensch und Maschine und sind eine Momentaufnahme
+        des aktuellen technischen Standes generativer KI. Selbstverständlich dürfen ethische Bedenken nicht außer Acht gelassen werden.
+         Gerade in gestalterischen Berufen hat KI aufgrund ihrer niedrigen Kosten und schnellen und stetig besser werdenden Ergebnissen ein hohes
+          Zerstörungspotenzial. Diese Arbeit
+       soll daher nicht dafür stehen, dass KI menschliche Kreativität ersetzen kann. Stattdessen sollte sie als potenzielles, ergänzendes Medium genutzt werden.</p>
+
+
+
+    <div id="lightbox" class="lightbox hidden">
+  <span class="close">&times;</span>
+  <img class="lightbox-img" src="" alt="Großansicht">
+   <span class="arrow left">&#10094;</span>  
+  <span class="arrow right">&#10095;</span>
+</div>
+
+
+ </main>
+  <script>
+  function toggleMenu() {
+    const menu = document.getElementById("fullscreenMenu");
+    menu.classList.toggle("hidden");
+  }
+
+   const lightbox = document.getElementById("lightbox");
+  const lightboxImg = lightbox.querySelector(".lightbox-img");
+  const closeBtn = lightbox.querySelector(".close");
+
+  document.querySelectorAll(".clickable").forEach(img => {
+    img.addEventListener("click", () => {
+      lightboxImg.src = img.src;
+      lightbox.classList.remove("hidden");
+    });
+  });
+
+  closeBtn.addEventListener("click", () => {
+    lightbox.classList.add("hidden");
+    lightboxImg.src = "";
+  });
+
+  lightbox.addEventListener("click", (e) => {
+    if (e.target === lightbox) {
+      lightbox.classList.add("hidden");
+      lightboxImg.src = "";
+    }
+  });
+
+
+  const images = Array.from(document.querySelectorAll(".clickable"));
+let currentIndex = 0;
+
+images.forEach((img, index) => {
+  img.addEventListener("click", () => {
+    currentIndex = index;
+    showImage(currentIndex);
+  });
+});
+
+function showImage(index) {
+  lightboxImg.src = images[index].src;
+  lightbox.classList.remove("hidden");
+}
+
+// Navigation mit Pfeilen
+document.querySelector(".arrow.left").addEventListener("click", () => {
+  currentIndex = (currentIndex - 1 + images.length) % images.length;
+  showImage(currentIndex);
+});
+
+document.querySelector(".arrow.right").addEventListener("click", () => {
+  currentIndex = (currentIndex + 1) % images.length;
+  showImage(currentIndex);
+});
+
+</script>
+
 </body>
 </html>
