--- a/projekte/egor.html
+++ b/projekte/egor.html
@@ -3,9 +3,179 @@
 <head>
   <meta charset="UTF-8">
   <title>Egor</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>Egor von Felix Eberhardt</h1>
+<body class="projektseite">
+
+  <div class="menu-toggle" onclick="toggleMenu()">
+  <span>Zwischenräume<br>Übergänge</span>
+</div>
+
+<div id="fullscreenMenu" class="hidden">
+  <nav>
+    <ul>
+      <li><a href="info.html">Über die Exkursion</a></li>
+      <li><a href="briefe.html">Briefe an Maurice</a></li>
+      <li><a href="egor.html">Egor</a></li>
+      <li><a href="HumanNature.html">HUMAN NATURE - the nature of being human</a></li>
+      <li><a href="mareesImprimees.html">Marées Imprimées - entre rivage et corps</a></li>
+      <li><a href="menhirküre.html">Menhirküre</a></li>
+      <li><a href="stayhere.html">STAY HERE</a></li>
+      <li><a href="TheInBetween.html">The In-Between - Where Thoughts Find Words</a></li>
+      <li><a href="thelake.html">the lake</a></li>
+      <li><a href="tiefblau.html">Tiefblau </a></li>
+      <li><a href="entre-sentieure.html">une entre-sentieure</a></li>
+      <li><a href="UebergaengeInMusik.html">Übergänge in der Musik: Eine Reise von alt zu neu – traditionell zu modern</a></li>
+      <li><a href="zwischentoene.html">ZWISCHENTÖNE</a></li>
+      <li><a href="IchUndWir.html">Zwischen ich und wir</a></li>
+    </ul>
+  </nav>
+</div>
+
+ <main class="page-content">
+  <h1>Egor </h1>
+   <p class="autor">von Felix Eberhardt</p>
+
+   <p>Wie würde ein Charakter aussehen, der sich ausschließlich in Zwischenräumen aufhält?</p>
+
+   <section class="intro-block">
+    <img src="../images/projekte/Egor/Egor_final1.1.jpg" alt="Egor Hauptbild" class="clickable intro-img">
+     <div class="intro-text">
+
+      <p>Diese Frage habe ich in meinem Projekt „Egor“, bretonisch für „Zwischenraum oder Raum, beantwortet. Von anfänglichen Skizzen bis zu 
+        den ausgearbeiteten Illustrationen war mir klar, dass der Charakter, Egor, weder männlich noch weiblich sein sollte. Weder lebend noch tot. 
+        Weder dick noch dünn. Das Konzept, diese Gegensätze darzustellen 
+        und zu personifizieren, war die besondere Herausforderung.</p>
+
+      <p>Inspiriert von Flechten, Steinen und Seegras habe ich mit anfänglichen Skizzen begonnen. Schnell kristallisierte sich die Idee, eine Art 
+        Wächter zu entwerfen. Ein Beschützer der Strände, Steinlücken und 
+        Orte, wo verschiedene Umstände aufeinandertreffen. Eine Art Charakter, der in altertümlichen Sagen vorkommen könnte.</p>
+
+      <p>Nun galt es die Fragen rund um Egor zu beantworten: Wie bewegt 
+        sich dieses Wesen? Welche Werkzeuge oder Waffen nutzt es? Wie 
+        interagiert es mit der Umwelt? </p>
+      
+    </div>
+  </section>
+
+
+  <p>Bei der Bewegung wurde ich von verschiedenen Tänzen inspiriert, wie 
+    Ballett, Sumo und traditionellen bretonischen Volkstänzen. Widergespiegelt wird hier die gegensätzliche 
+    und dynamische Art von Zwischenräumen. Fließende Bewegungen ähneln dem Meer, im Kontrast 
+    zu starren Posen, wie Steine an die Wellen schlagen.</p>
+
+  <p>Als Werkzeug und Waffe nutzt Egor einen Stab aus Treibholz, an welchem lebende Miesmuscheln befestigt sind. 
+    Inspiriert von dem seltsam wirkenden „Füßen“ der Muscheln, kann Egor diese in fließenden 
+  Bewegungen einsetzen. Egal ob als Peitsche, Greifarme oder um die 
+  Balance bei der Bewegung zu halten.</p>
+
+  <p>Egor interagiert erst mit Menschen, wenn es dazu gezwungen wird, 
+  etwa durch die Zerstörung der Lebensräume von Tieren. Obwohl Egor 
+  keiner Maifliege oder Sardine etwas antun würde, kann es nun gnadenlos sein. 
+  </p>
+  <div class="image-row">
+  <img src="/images/projekte/Egor/Egor_final3.1.jpg" alt="Bild 1" class="clickable">
+  <img src="/images/projekte/Egor/Egor_final2.1.jpg" alt="Bild 2" class="clickable">
+  <img src="/images/projekte/Egor/Egor_final4.1.jpg" alt="Bild 3" class="clickable">
+</div>
+
+  <p>Die Arbeiten habe ich mit Bleistift und Fineliner angefertigt und gerahmt. Die Rahmen von zwei Werken sind inszeniert mit 
+    starrem Aluminiumdraht, gebogen in eine fluide Form. Befestigt mit Fäden, dessen Farben den Flechten, welche auf Egors Körper
+     wachsen, nachempfunden sind, ist Seeglas aus der Bretagne. Diese Stücke bilden 
+    die „Augen“ Egors und werden somit greifbar gemacht.</p>
+
+
+
+  <!--
+        <div class="image-grid">
+      <img src="/images/projekte/Egor/" class="clickable" class="block-img>
+      <img src="/images/projekte/Postkarten/Karte_2.jpg" alt="Postkarte Vorderseite 2" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_3.jpg" alt="Postkarte Vorderseite 3" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_4.jpg" alt="Postkarte Vorderseite 4" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_5.jpg" alt="Postkarte Vorderseite 5" class="clickable">
+      <img src="/images/projekte/Postkarten/Karte_6.jpg" alt="Postkarte Vorderseite 6" class="clickable">
+    </div>
+
+
+      
+       <div class="image-grid rückseiten">
+      <img src="/images/projekte/Postkarten/Text_Karte_1.jpg" alt="Postkarte Rückseite 1" class="clickable">
+      <img src="/images/projekte/Postkarten/Text_Karte_2.jpg" alt="Postkarte Rückseite 2" class="clickable">
+      <img src="/images/projekte/Postkarten/Text_Karte_3.jpg" alt="Postkarte Rückseite 3" class="clickable">
+      <img src="/images/projekte/Postkarten/Text_Karte_4.jpg" alt="Postkarte Rückseite 4" class="clickable" >
+      <img src="/images/projekte/Postkarten/Text_Karte_5.jpg" alt="Postkarte Rückseite 5" class="clickable" >
+      <img src="/images/projekte/Postkarten/Text_Karte_6.jpg" alt="Postkarte Rückseite 6" class="clickable">
+    </div>
+
+
+-->
+
+    <div id="lightbox" class="lightbox hidden">
+  <span class="close">&times;</span>
+  <img class="lightbox-img" src="" alt="Großansicht">
+   <span class="arrow left">&#10094;</span>  
+  <span class="arrow right">&#10095;</span>
+</div>
+
+
+ </main>
+  <script>
+  function toggleMenu() {
+    const menu = document.getElementById("fullscreenMenu");
+    menu.classList.toggle("hidden");
+  }
+
+   const lightbox = document.getElementById("lightbox");
+  const lightboxImg = lightbox.querySelector(".lightbox-img");
+  const closeBtn = lightbox.querySelector(".close");
+
+  document.querySelectorAll(".clickable").forEach(img => {
+    img.addEventListener("click", () => {
+      lightboxImg.src = img.src;
+      lightbox.classList.remove("hidden");
+    });
+  });
+
+  closeBtn.addEventListener("click", () => {
+    lightbox.classList.add("hidden");
+    lightboxImg.src = "";
+  });
+
+  lightbox.addEventListener("click", (e) => {
+    if (e.target === lightbox) {
+      lightbox.classList.add("hidden");
+      lightboxImg.src = "";
+    }
+  });
+
+
+  const images = Array.from(document.querySelectorAll(".clickable"));
+let currentIndex = 0;
+
+images.forEach((img, index) => {
+  img.addEventListener("click", () => {
+    currentIndex = index;
+    showImage(currentIndex);
+  });
+});
+
+function showImage(index) {
+  lightboxImg.src = images[index].src;
+  lightbox.classList.remove("hidden");
+}
+
+// Navigation mit Pfeilen
+document.querySelector(".arrow.left").addEventListener("click", () => {
+  currentIndex = (currentIndex - 1 + images.length) % images.length;
+  showImage(currentIndex);
+});
+
+document.querySelector(".arrow.right").addEventListener("click", () => {
+  currentIndex = (currentIndex + 1) % images.length;
+  showImage(currentIndex);
+});
+
+</script>
+
 </body>
 </html>
