--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
 </div>
 
 
+    <div id="navigation">
+      <div id="comboZone" class="combo-zone" onclick="openContent('briefe.html')"></div>
+    </div>
 
-    <div id="comboZone" class="combo-zone"></div>
-
-
+    <div id="contentWrapper" class="hidden">
+      <div class="content"></div>
+    </div>
     <!-- Interact.js lokal -->
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="script.js"></script>
