--- a/projekte/info.html
+++ b/projekte/info.html
@@ -3,41 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <title>Über die Exkursion</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
+<body class="projektseite">
+
+  <div class="menu-toggle" onclick="toggleMenu()">
+  <span>Zwischenräume<br>Übergänge</span>
+  </div>
+
+<div id="fullscreenMenu" class="hidden">
+  <nav>
+    <ul>
+      <li><a href="info.html">Über die Exkursion</a></li>
+      <li><a href="briefe.html">Briefe an Maurice</a></li>
+      <li><a href="egor.html">Egor</a></li>
+      <li><a href="HumanNature.html">HUMAN NATURE - the nature of being human</a></li>
+      <li><a href="mareesImprimees.html">Marées Imprimées - entre rivage et corps</a></li>
+      <li><a href="menhirküre.html">Menhirküre</a></li>
+      <li><a href="stayhere.html">STAY HERE</a></li>
+      <li><a href="TheInBetween.html">The In-Between - Where Thoughts Find Words</a></li>
+      <li><a href="thelake.html">the lake</a></li>
+      <li><a href="tiefblau.html">Tiefblau </a></li>
+      <li><a href="entre-sentieure.html">une entre-sentieure</a></li>
+      <li><a href="UebergaengeInMusik.html">Übergänge in der Musik: Eine Reise von alt zu neu – traditionell zu modern</a></li>
+      <li><a href="zwischentoene.html">ZWISCHENTÖNE</a></li>
+      <li><a href="IchUndWir.html">Zwischen ich und wir</a></li>
+    </ul>
+  </nav>
+</div>
+
+ <main class="page-content">
   <h1>Zwischenräume und Übergänge</h1>
-  <p>Zwischenräume sind mehr als bloße Übergänge, sie sind lebendige Zustände des Wandels. Sie markieren jene kostbaren Momente, in denen das Bekannte sich auflöst und Neues langsam Gestalt annimmt. Im Dazwischen liegt ein kreatives Potenzial, das weder festgelegt noch abgeschlossen ist. Es ist ein Raum der Möglichkeiten, des Fragens, Entdeckens und Veränderns. 
 
-  
+   <p> Zwischenräume sind mehr als bloße Übergänge, sie sind lebendige Zustände des Wandels. Sie markieren jene kostbaren Momente, in 
+    denen das Bekannte sich auflöst und Neues langsam Gestalt annimmt.
+     Im Dazwischen liegt ein kreatives Potenzial, das weder festgelegt noch abgeschlossen ist. Es ist ein Raum der Möglichkeiten, des Fragens, Entdeckens und Veränderns. </p>
 
-Die bretonische Küste, geformt durch das stetige Spiel der Gezeiten, steht sinnbildlich für diesen Zustand. Zwischen Ebbe und Flut entsteht eine sich ständig wandelnde Landschaft: temporär sichtbar, temporär begehbar, immer im Übergang zwischen Wasser und Land. Diese flüchtigen Küstenzonen werden zu natürlichen Metaphern für Kreativität und Transformation. Sie zeigen, wie Bewegung Form erzeugt und wie aus jedem Rückzug ein Neubeginn erwächst. 
+    <p>Die bretonische Küste, geformt durch das stetige Spiel der Gezeiten, steht sinnbildlich für diesen Zustand. Zwischen Ebbe und
+       Flut entsteht eine sich ständig wandelnde Landschaft: temporär sichtbar, temporär begehbar, immer im Übergang zwischen Wasser 
+       und Land. Diese flüchtigen Küstenzonen werden zu natürlichen Metaphern für Kreativität und Transformation. 
+       Sie zeigen, wie Bewegung Form erzeugt und wie aus jedem Rückzug ein Neubeginn erwächst. </p>
 
-  
+    <p>Vom 8. bis 17. November 2024 begaben sich Studierende der Hochschule Düsseldorf aus den Fachbereichen Medien, Design sowie 
+      Sozial- und Kulturwissenschaften auf eine interdisziplinäre Exkursion in die Bretagne. Das Thema „Zwischenräume und Übergänge“ 
+      wurde dabei nicht nur landschaftlich, sondern auch kulturell, theoretisch und gestalterisch erforscht, in einem offenen Zusammenspiel 
+      aus Wahrnehmung, Reflexion und künstlerischer Praxis. </p>
 
-Vom 8. bis 17. November 2024 begaben sich Studierende der Hochschule Düsseldorf aus den Fachbereichen Medien, Design sowie Sozial- und Kulturwissenschaften auf eine interdisziplinäre Exkursion in die Bretagne. Das Thema „Zwischenräume und Übergänge“ wurde dabei nicht nur landschaftlich, sondern auch kulturell, theoretisch und gestalterisch erforscht, in einem offenen Zusammenspiel aus Wahrnehmung, Reflexion und künstlerischer Praxis. 
+    <p>Die Bretagne wurde zur Bühne und zum Denkraum zugleich. Natur, Geschichte und Gesellschaft trafen auf individuelle Perspektiven, gestalterische 
+      Methoden und kollektive Erfahrung. Während unserer Reise entstanden vielfältige Arbeiten, fotografisch, filmisch, zeichnerisch, auditiv 
+      oder textlich, die sich mit Zwischenwelten und Veränderungsprozessen beschäftigen. Diese Prozesse sind nicht auf ein Format beschränkt, sondern 
+      bewusst offengehalten. </p>
 
-  
+    <p>Das Projekt lebte vom Dialog mit der Landschaft, miteinander, mit dem Unbekannten. Gemeinsames Wohnen, Kochen, Forschen und Diskutieren 
+      machten die Exkursion zu einem kollektiven Erfahrungsraum. Dabei waren Vorkenntnisse nicht entscheidend. Vielmehr zählten Offenheit, Neugier 
+      und die Bereitschaft, sich auf Zwischenwelten einzulassen, auf Übergänge im Außen wie im Inneren. </p>
 
-Die Bretagne wurde zur Bühne und zum Denkraum zugleich. Natur, Geschichte und Gesellschaft trafen auf individuelle Perspektiven, gestalterische Methoden und kollektive Erfahrung. Während unserer Reise entstanden vielfältige Arbeiten, fotografisch, filmisch, zeichnerisch, auditiv oder textlich, die sich mit Zwischenwelten und Veränderungsprozessen beschäftigen. Diese Prozesse sind nicht auf ein Format beschränkt, sondern bewusst offen gehalten. 
+    <p>Welche Formen nimmt das Dazwischen an? Wie lässt es sich beobachten, dokumentieren, gestalten?
+       Und was entsteht, wenn sich unterschiedliche Disziplinen gemeinsam diesen Fragen nähern?</p>
 
-  
+    <p>Gerade in einer Zeit globaler Unsicherheiten und gesellschaftlicher Umbrüche gewinnen Zwischenräume an Bedeutung.
+       Sie sind Reflexionszonen, Orte des Innehaltens, aber auch des Möglich-Machens. Das Projekt steht exemplarisch für 
+       eine Hochschullehre, die sich nicht auf das Klassenzimmer beschränkt, sondern Erfahrungsräume schafft, in denen Wissen, Kreativität 
+       und soziale Interaktion auf neue Weise miteinander verwoben werden. </p>
+      
+    <p>Diese Plattform, sei es in Buchform oder digital, dokumentiert und reflektiert unsere gemeinsame Reise. Sie ist kein Abschlussbericht.
+       Sie ist ein lebendes Archiv. Ein Echo der Wellen. Ein Versuch, Flüchtiges festzuhalten, ohne es zu fixieren. </p>
 
-Das Projekt lebte vom Dialog mit der Landschaft, miteinander, mit dem Unbekannten. Gemeinsames Wohnen, Kochen, Forschen und Diskutieren machten die Exkursion zu einem kollektiven Erfahrungsraum. Dabei waren Vorkenntnisse nicht entscheidend. Vielmehr zählten Offenheit, Neugier und die Bereitschaft, sich auf Zwischenwelten einzulassen, auf Übergänge im Außen wie im Inneren. 
+    <p>Sie lädt dazu ein, sich einzulassen auf ein Denken in Übergängen, auf ein Erleben des Temporären, auf das kreative Potenzial des Nicht-Festen. </p>
 
-  
-Welche Formen nimmt das Dazwischen an? Wie lässt es sich beobachten, dokumentieren, gestalten? Und was entsteht, wenn sich unterschiedliche Disziplinen gemeinsam diesen Fragen nähern? 
+ </main>
+  <script>
+  function toggleMenu() {
+    const menu = document.getElementById("fullscreenMenu");
+    menu.classList.toggle("hidden");
+  }
+</script>
 
-  
-
-Gerade in einer Zeit globaler Unsicherheiten und gesellschaftlicher Umbrüche gewinnen Zwischenräume an Bedeutung. Sie sind Reflexionszonen, Orte des Innehaltens, aber auch des Möglich-Machens. Das Projekt steht exemplarisch für eine Hochschullehre, die sich nicht auf das Klassenzimmer beschränkt, sondern Erfahrungsräume schafft, in denen Wissen, Kreativität und soziale Interaktion auf neue Weise miteinander verwoben werden. 
-
-  
-
-Diese Plattform, sei es in Buchform oder digital, dokumentiert und reflektiert unsere gemeinsame Reise. Sie ist kein Abschlussbericht. Sie ist ein lebendes Archiv. Ein Echo der Wellen. Ein Versuch, Flüchtiges festzuhalten, ohne es zu fixieren. 
-
-  
-
-Sie lädt dazu ein, sich einzulassen auf ein Denken in Übergängen, auf ein Erleben des Temporären, auf das kreative Potenzial des Nicht-Festen. <p>
 </body>
 </html>
