kreise in der navigation

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 
 <div id="fullscreenMenu" class="hidden">
   <nav>
-    <ul>
+    <ul id="projektListe">
       <li><a href="projekte/info.html">Über die Exkursion</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/briefe.html'); return false;">Briefe an Maurice</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/egor.html'); return false;">Egor</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/HumanNature.html'); return false;">HUMAN NATURE – the nature of being human</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/mareesImprimees.html'); return false;">Marées Imprimées - entre rivage et corps</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/menhirküre.html'); return false;">Menhirküre</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/stayhere.html'); return false;">STAY HERE</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/TheInBetween.html'); return false;">The In-Between – Where Thoughts Find Words</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/thelake.html'); return false;">the lake</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/tiefblau.html'); return false;">Tiefblau </a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/entre-sentieure.html'); return false;">une entre-sentieure</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/UebergaengeInMusik.html'); return false;">Übergänge in der Musik: Eine Reise von alt zu neu – traditionell zu modern</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/zwischentoene.html'); return false;">ZWISCHENTÖNE</a></li>
-      <li><a href="#" onclick="toggleMenu(); openContent('projekte/IchUndWir.html'); return false;">Zwischen ich und wir</a></li>
+      <li><a href="#" data-file="projekte/briefe.html">Briefe an Maurice</a></li>    
+      <li><a href="#" data-file="projekte/egor.html">Egor</a></li>
+      <li><a href="#" data-file="projekte/HumanNature.html">HUMAN NATURE – the nature of being human</a></li>
+      <li><a href="#" data-file="projekte/mareesImprimees.html">Marées Imprimées - entre rivage et corps</a></li>
+      <li><a href="#" data-file="projekte/menhirküre.html">Menhirküre</a></li>
+      <li><a href="#" data-file="projekte/stayhere.html">STAY HERE</a></li>
+      <li><a href="#" data-file="projekte/TheInBetween.html">The In-Between – Where Thoughts Find Words</a></li>
+      <li><a href="#" data-file="projekte/thelake.html">the lake</a></li>
+      <li><a href="#" data-file="projekte/tiefblau.html">Tiefblau </a></li>
+      <li><a href="#" data-file="projekte/entre-sentieure.html">une entre-sentieure</a></li>
+      <li><a href="#" data-file="projekte/UebergaengeInMusik.html">Übergänge in der Musik: Eine Reise von alt zu neu – traditionell zu modern</a></li>
+      <li><a href="#" data-file="projekte/zwischentoene.html">ZWISCHENTÖNE</a></li>
+      <li><a href="#" data-file="projekte/IchUndWir.html">Zwischen ich und wir</a></li>
     </ul>
   </nav>
 </div>
