Überlappende Kreise mit Beschriftung auf Unterseiten eingebaut

--- a/projekte/HumanNature.html
+++ b/projekte/HumanNature.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>HUMAN NATURE</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>HUMAN NATURE – the nature of being human von Svenja Mezynski, Lilli F. Wieth </h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">hummer</span>
+  <img class="kreis-img" src="images/meerestiere/hummer.png" alt="hummer">
+  <img class="kreis-img overlap" src="images/meerestiere/schlangenseestern.png" alt="seestern">
+  <span class="tier-name right">schlangenseestern</span>
+</div>
+
+<main class="page-content">
+        <h1>HUMAN NATURE – the nature of being human</h1>
+        <p class="autor">von Svenja Mezynski, Lilli F. Wieth</p>
+
+</main>
