--- a/projekte/IchUndWir.html
+++ b/projekte/IchUndWir.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Zwischen ich und wir</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>Zwischen ich und wir von Sakura Hinrichsen </h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">oktopus</span>
+  <img class="kreis-img" src="images/meerestiere/oktopus.png" alt="oktopus">
+  <img class="kreis-img overlap" src="images/meerestiere/seeanemone.png" alt="seeanemone">
+  <span class="tier-name right">seeanemone</span>
+</div>
+
+<main class="page-content">
+        <h1>Zwischen ich und wir</h1>
+        <p class="autor">von Sakura Hinrichsen</p>
+
+</main>
