--- a/projekte/TheInBetween.html
+++ b/projekte/TheInBetween.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>The In-Between</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>The In-Between – Where Thoughts Find Words von Sara Fiujlaali </h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">seeanemone</span>
+  <img class="kreis-img" src="images/meerestiere/seeanemone.png" alt="seeanemone">
+  <img class="kreis-img overlap" src="images/meerestiere/kompassqualle.png" alt="kompassqualle">
+  <span class="tier-name right">kompassqualle</span>
+</div>
+
+<main class="page-content">
+        <h1>The In Between</h1>
+        <p class="autor">von </p>
+
+</main>
