--- a/projekte/UebergaengeInMusik.html
+++ b/projekte/UebergaengeInMusik.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Übergänge in der Musik</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>Übergänge in der Musik: Eine Reise von alt zu neu – traditionell zu modern von Nils Weinandy </h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">auster</span>
+  <img class="kreis-img" src="images/meerestiere/auster.png" alt="auster">
+  <img class="kreis-img overlap" src="images/meerestiere/napfschnecke.png" alt="Napfschnecke">
+  <span class="tier-name right">Napfschnecke</span>
+</div>
+
+<main class="page-content">
+        <h1>Übergänge in der Musik: Eine Reise von alt zu neu – traditionell zu modern</h1>
+        <p class="autor"> von Nils Weinandy</p>
+
+</main>
