--- a/projekte/egor.html
+++ b/projekte/egor.html
@@ -1,4 +1,9 @@
-
+<div class="kreis-duo">
+  <span class="tier-name left">felsgarnele</span>
+  <img class="kreis-img" src="images/meerestiere/felsgarnele.png" alt="garnele">
+  <img class="kreis-img overlap" src="images/meerestiere/seepocken.png" alt="pocken">
+  <span class="tier-name right">seepocken</span>
+</div>
 
  <main class="page-content">
   <h1>Egor </h1>
