--- a/projekte/entre-sentieure.html
+++ b/projekte/entre-sentieure.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>une entre-sentieure</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>„une entre-sentieure“ - eine intermediale Narration von Hannah Schmitz </h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">kompassqualle</span>
+  <img class="kreis-img" src="images/meerestiere/kompassqualle.png" alt="qualle">
+  <img class="kreis-img overlap" src="images/meerestiere/rochen.png" alt="rochen">
+  <span class="tier-name right">rochen</span>
+</div>
+
+<main class="page-content">
+        <h1>„une entre-sentieure“ - eine intermediale Narration</h1>
+        <p class="autor">von Hannah Schmitz</p>
+
+</main>
