--- a/projekte/mareesImprimees.html
+++ b/projekte/mareesImprimees.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Marées Imprimées</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>Marées Imprimées - entre rivage et corps von Melanie Cieslinski </h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">napfschnecke</span>
+  <img class="kreis-img" src="images/meerestiere/napfschnecke.png" alt="napfschnecke">
+  <img class="kreis-img overlap" src="images/meerestiere/seeigel.png" alt="seeigel">
+  <span class="tier-name right">seeigel</span>
+</div>
+
+<main class="page-content">
+        <h1>Marées Imprimées - entre rivage et corps</h1>
+        <p class="autor">von Melanie Cieslinski</p>
+
+</main>
