--- a/projekte/menhirküre.html
+++ b/projekte/menhirküre.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Menhirküre</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>Menhirküre von Bent Hillerkus</h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">hummer</span>
+  <img class="kreis-img" src="images/meerestiere/hummer.png" alt="hummer">
+  <img class="kreis-img overlap" src="images/meerestiere/rochen.png" alt="rochen">
+  <span class="tier-name right">rochen</span>
+</div>
+
+<main class="page-content">
+        <h1>Menhirküre</h1>
+        <p class="autor">von Bent Hillerkus</p>
+
+</main>
