--- a/projekte/stayhere.html
+++ b/projekte/stayhere.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>STAY HERE</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>STAY HERE von Amelie Schepping</h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">felsgarnele</span>
+  <img class="kreis-img" src="images/meerestiere/felsgarnele.png" alt="felsgarnele">
+  <img class="kreis-img overlap" src="images/meerestiere/oktopus.png" alt="oktopus">
+  <span class="tier-name right">oktopus</span>
+</div>
+
+<main class="page-content">
+        <h1>STAY HERE</h1>
+        <p class="autor">von Amelie Schepping</p>
+
+</main>
