--- a/projekte/briefe.html
+++ b/projekte/briefe.html
@@ -1,3 +1,10 @@
+<div class="kreis-duo">
+  <span class="tier-name left">Alge</span>
+  <img class="kreis-img" src="images/meerestiere/alge.png" alt="Alge">
+  <img class="kreis-img overlap" src="images/meerestiere/napfschnecke.png" alt="Napfschnecke">
+  <span class="tier-name right">Napfschnecke</span>
+</div>
+
 
       <main class="page-content">
         <h1>Briefe an Maurice</h1>
