--- a/projekte/thelake.html
+++ b/projekte/thelake.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>the lake</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>the lake von Alina Funke </h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">Alge</span>
+  <img class="kreis-img" src="images/meerestiere/alge.png" alt="Alge">
+  <img class="kreis-img overlap" src="images/meerestiere/seeanemone.png" alt="seeanemone">
+  <span class="tier-name right">seeanemone</span>
+</div>
+
+<main class="page-content">
+        <h1>the lake</h1>
+        <p class="autor">von Alina Funke</p>
+</main>
