--- a/projekte/tiefblau.html
+++ b/projekte/tiefblau.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Tiefblau</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>Tiefblau von Steffen Herweg </h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">schlangenseestern</span>
+  <img class="kreis-img" src="images/meerestiere/schlangenseestern.png" alt="schlangenseestern">
+  <img class="kreis-img overlap" src="images/meerestiere/seepocken.png" alt="seepocken">
+  <span class="tier-name right">seepocken</span>
+</div>
+
+<main class="page-content">
+        <h1>Tiefblau</h1>
+        <p class="autor">von Steffen Herweg</p>
+
+</main>
