--- a/projekte/zwischentoene.html
+++ b/projekte/zwischentoene.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>ZWISCHENTÖNE</title>
-</head>
-<body>
-  <a href="../index.html">← Zurück zur Übersicht</a>
-  <h1>ZWISCHENTÖNE von Amelie Schepping</h1>
-</body>
-</html>
+<div class="kreis-duo">
+  <span class="tier-name left">fisch</span>
+  <img class="kreis-img" src="images/meerestiere/fisch.png" alt="fisch">
+  <img class="kreis-img overlap" src="images/meerestiere/seeigel.png" alt="seeigel">
+  <span class="tier-name right">seeigel</span>
+</div>
+
+<main class="page-content">
+        <h1>ZWISCHENTÖNE</h1>
+        <p class="autor">von Amelie Schepping</p>
+
+</main>
